--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: tahoma, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(77, 67, 67)
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.title-div {
+  text-align: center;
+  font-size: 45px;
+
+}
+
+.portfolio-div {
+  display: flex;
+  max-width: 1000px;
+  width: 85vw;
+  height: auto;
+  background: green;
+  margin: 25px auto;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.project-div {
+  display: block;
+  max-width: 450px;
+  width: 45%;
+  min-width:420px;
+  height: 550px;
+  background-color: aqua;
+  border-radius: 15px;
+  margin: 15px;
+  padding: 0px 8px 0px 8px;
+}
+
+.info-div h3 {
+  text-align: center;
+  color: white;
+}
+
+.project-div p {
+  text-align: center;
+}
+
+.photo-div {
+  width: 90%;
+  display: block;
+  height: 250px;
+  background-color: purple;
+  margin: 0 auto;
+}
+
+img {
+  height: 100%;
+  width: 100%;
+}
+
+.links-div {
+  position: relative;
+  bottom: 0px;
+}
+
+h4 {
+  text-align: center;
+}
+
+.cv-img {
+  height: 50px;
+  width: 40px;
+}
+
+.icons-div {
+  padding: 15px 0px 15px;
+    margin: 0 auto;
+    padding: auto;
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
 }
