--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
   max-width: 1000px;
   width: 85vw;
   height: auto;
-  background: green;
+  background: rgb(77, 67, 67);
   margin: 25px auto;
   flex-wrap: wrap;
   flex-direction: row;
@@ -39,7 +39,7 @@ code {
   width: 45%;
   min-width:420px;
   height: 550px;
-  background-color: aqua;
+  background-color: oldlace;
   border-radius: 15px;
   margin: 15px;
   padding: 0px 10px 0px 10px;
