--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ code {
     monospace;
 }
 
+.couch {
+  width: 300px;
+  height: 100%
+}
+
 .title-div {
   display: flex;
   text-align: center;
@@ -47,6 +52,10 @@ code {
   margin: 15px;
   padding: 0px 10px 0px 10px;
   border: 2px solid #ff5277;
+}
+
+container {
+  padding: 15px;
 }
 
 .info-div h3 {
@@ -120,14 +129,13 @@ li:hover {
 .navbar {
   display: flex;
   justify-content: space-between;
-  max-width: 1200px;
-  width: 85vw;
+  width: 100%;
   margin: auto;
   padding: 15px;
   position: sticky;
   top: 0px;
-  background-color: #0e141b;
-  border-bottom: 1px solid white;
+  background-color: #0e141b6c;
+  /* border-bottom: 1px solid white; */
 }
 
 .nav-list {
@@ -155,4 +163,12 @@ svg:hover {
 
 .white {
   color: white;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  width: 85vw;
+  max-width: 1200px;
+  margin: auto;
 }
