--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,8 @@ code {
   border: 2px solid #ff5277;
 }
 
-container {
-  padding: 15px;
+.container {
+  padding: 25px;
 }
 
 .info-div h3 {
@@ -131,7 +131,7 @@ li:hover {
   justify-content: space-between;
   width: 100%;
   margin: auto;
-  padding: 15px;
+  padding: 15px 0px;
   position: sticky;
   top: 0px;
   background-color: #0e141b6c;
