--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@ code {
   height: 50vh;
   flex-direction: column;
   justify-content: center;
+  padding: 0px 35px;
 }
 
 .portfolio-div {
@@ -61,15 +62,15 @@ code {
   padding: 25px;
 }
 
+.info-div {
+  padding: 0px 35px;
+}
+
 .info-div h3 {
   font-size: 25px;
   text-align: center;
   color: white;
 }
-/* 
-.info-div {
-  height: 150px;
-} */
 
 .project-div p {
   text-align: center;
@@ -236,6 +237,7 @@ li:hover {
 
 @media only screen and (max-width: 768px) {
   .navbar {
-    visibility:hidden
+    visibility:hidden;
+    position: absolute;
   }
 }
