--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ code {
   flex-direction: column;
   justify-content: space-between;
   max-width: 550px;
-  width: 45%;
+  width: 40%;
   min-width:350px;
   min-height: 550px;
   height: auto;
@@ -238,5 +238,18 @@ li:hover {
 @media only screen and (max-width: 768px) {
   .navbar {
     visibility:hidden;
+    position: absolute
+  }
+  .title-div h4 {
+    font-size: 35px;
+  }
+  .title-div h2 {
+    font-size: 40px;
+  }
+  .info-div h4 {
+    font-size: 20px;
+  }
+  .title-div {
+    padding-top: 25px;
   }
 }
