cv colour now matches theme

--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,7 @@ h4 {
 }
 
 .cv-img:hover {
-  filter: invert(54%) sepia(93%) saturate(748%) hue-rotate(317deg) brightness(94%) contrast(101%);
+  filter: invert(46%) sepia(68%) saturate(2477%) hue-rotate(317deg) brightness(101%) contrast(101%)
 }
 
 .icons-div {
